[package]
name = "rocket-util"
version.workspace = true
edition.workspace = true

[features]
reqwest = ["dep:reqwest", "futures", "tokio-util"]

[dependencies]
rocket = "0.5"
thiserror = "1"

[dependencies.futures]
version = "0.3"
optional = true

[dependencies.ics]
version = "0.5"
default-features = false
optional = true

[dependencies.image]
version = "0.24"
default-features = false
features = ["png"]
optional = true

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["stream"]
optional = true

[dependencies.rocket_csrf]
git = "https://github.com/fenhl/rocket_csrf"
branch = "rocket05"
optional = true

[dependencies.rocket-util-derive]
path = "../rocket-util-derive"

[dependencies.tokio-util]
version = "0.7"
optional = true
