[package]
name = "rocket-util"
version.workspace = true
edition.workspace = true

[features]
reqwest = ["dep:reqwest", "futures", "tokio-util"]

[dependencies]
futures = { version = "0.3", optional = true }
ics = { version = "0.5", default-features = false, optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["stream"], optional = true }
rocket = "0.5"
rocket-util-derive = { path = "../rocket-util-derive" }
rocket_csrf = { git = "https://github.com/fenhl/rocket_csrf", branch = "rocket05", optional = true }
thiserror = "2"
tokio-util = { version = "0.7", optional = true }
